--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Flask
-flask-socketio
-eventlet
-gunicorn
-python-dotenv
+Flask==2.2.5
+Flask-SocketIO==5.3.3
+eventlet==0.33.0
+gunicorn==20.1.0
+openai==0.27.0
+python-dotenv==1.0.0
+Pillow==9.5.0
