--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 Flask==2.2.5
 Flask-SocketIO==5.3.3
-eventlet==0.33.0
 gunicorn==20.1.0
 openai==0.27.0
 python-dotenv==1.0.0
 Pillow==10.0.0
 dnspython==2.2.1
+gevent==22.10.2
+gevent-websocket==0.10.1
